# Scientific-Software-Dev-Demo

./: .buildinfo  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  about.html  citation.html  dependencies.html  environment.yml  genindex.html  index.html  modules.html  mycosmo.constants.html  mycosmo.cosmology.html  mycosmo.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js
.doctrees/: about.doctree  citation.doctree  dependencies.doctree  environment.pickle  index.doctree  modules.doctree  mycosmo.constants.doctree  mycosmo.cosmology.doctree  mycosmo.doctree  quickstart.doctree
.github/workflows/: cd.yml  ci.yml  deploy-image.yml  profile.yml  verify.yml
_modules/: index.html
_modules/mycosmo/: cosmology.html
_sources/: about.md  index.rst  modules.rst  mycosmo.constants.rst  mycosmo.cosmology.rst  mycosmo.rst
docs/source/: about.md  citation.md  conf.py  dependencies.md  index.rst  mycosmo.constants.rst  mycosmo.cosmology.rst  mycosmo.rst  quickstart.md
mycosmo/: __init__.py  constants.py  cosmology.py
mycosmo/tests/: test_cosmology.py
scripts/: astropy_verification.py  profile_mycosmo.py
src/mycosmo/: __init__.py  cosmology.py
src/mycosmo/tests/: test_cosmology.py
