[project]
name = "mycosmo"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ "name" = "Samuel Farrens", "email" = "samuel.farrens@cea.fr" }]
maintainers = [{ "name" = "Samuel Farrens", "email" = "samuel.farrens@cea.fr" }]
description = 'This is an example cosmology package.'
dependencies = ["numpy"]
version = "0.0.1"

[project.optional-dependencies]
docs = ["myst-parser", "numpydoc", "sphinx", "sphinx-book-theme"]
lint = ["black"]
release = ["build", "twine"]
test = [
    "pytest",
    "pytest-cov",
    "pytest-emoji",
    "pytest-pydocstyle",
]
verify = ["astropy"]

# Install for development
dev = ["mycosmo[docs,lint,release,test]"]

[tool.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = ["--verbose", "--emoji", "--pydocstyle", "--cov=mycosmo"]
testpaths = ["mycosmo"]
