[project]
name = "mycosmo"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ "name" = "Samuel Farrens", "email" = "samuel.farrens@cea.fr" }]
maintainers = [{ "name" = "Samuel Farrens", "email" = "samuel.farrens@cea.fr" }]
description = 'This is an example cosmology package.'
dependencies = ["numpy"]
version = "0.0.2"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[project.optional-dependencies]
docs = ["myst-parser", "numpydoc", "sphinx", "sphinx-book-theme"]
lint = ["black", "isort"]
release = ["python-build", "twine"]
profile = ["line_profiler", "memory_profiler"]
test = [
    "pytest",
    "pytest-cov",
    "pytest-emoji",
    "pytest-pydocstyle",
]
verify = ["astropy"]

# Install for development
dev = ["mycosmo[docs,lint,release,profile,test,verify]"]

[tool.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = ["--verbose", "--emoji", "--pydocstyle", "--cov=mycosmo"]
testpaths = ["src/mycosmo"]
